Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 	<aside class="sidebar">
-	  	<img src="images/kev.jpeg" alt="Kevin" class="folio-image">
+	  	<img src="kev.jpeg" alt="Kevin" class="folio-image">
    	  <h1 align="center">Kevin S. Rivera Ramos</h1>
     	  <div align="center" class="emails">
         <a href="mailto:kevin.rivera110@upr.edu" target="_blank">
@@ -40,7 +40,7 @@
 <!-- Main content-->
 <main class="main-content">
 	<div class="main-text">
-		<img src="images/background.jpeg" id="about">
+		<img src="background.jpeg" id="about">
 		<h3>ABOUT ME</h3>
 		<p>I am currently a first-year Electrical Engineering student at the University of Puerto Rico, Mayagüez. In addition to my focus on engineering, I also have a strong affinity for the natural sciences, particularly chemistry and biology.</p>
 		<hr>
@@ -51,7 +51,7 @@
 		<h3>THINGS THAT I'VE DONE </h3>
 <div class="gallery">
     <div class="gallery-item" onclick="location.href='piezo.html'">
-        <img src="images/piezo.JPG" alt="Piezo Muscular Monitor">
+        <img src="piezo.JPG" alt="Piezo Muscular Monitor">
         <div class="info">Device that detects and assigns a numerical value to the signals received from a piezoelectric sensor. Personal Project - 2024</div>
 <p id="projects"><b>I'm looking for research, projects and internships for the coming years!</b></p>
 </div> 
@@ -60,7 +60,7 @@
 		<h3>AFFILIATIONS</h3>
 <div class="affiliations">
     <div class="affiliation-item">
-        <a href="https://instagram.com/embsuprm/"><img src="images/ieee-embs.jpeg" alt="IEEE EMBS" class="affiliation-image"></a>
+        <a href="https://instagram.com/embsuprm/"><img src="ieee-embs.jpeg" alt="IEEE EMBS" class="affiliation-image"></a>
         <div class="affiliation-details">
             <p>IEEE Engineering in Medicine and Biology Society</p>
             <h4>Mentee - Student Mentorship Program, Fall 2024</h4>
@@ -69,7 +69,7 @@
     </div>
     <hr>
     <div class="affiliation-item">
-        <a href="https://instagram.com/ieee.uprm/"><img src="images/ieee.jpeg" alt="IEEE UPRM" class="affiliation-image"></a>
+        <a href="https://instagram.com/ieee.uprm/"><img src="ieee.jpeg" alt="IEEE UPRM" class="affiliation-image"></a>
         <div class="affiliation-details">
             <p>IEEE UPRM Student Branch</p>
             <h3>Aug 2024 - Present</h3>
@@ -77,7 +77,7 @@
     </div>
     <hr>
     <div class="affiliation-item">
-        <a href="https://www.instagram.com/bulldogs_xc/"><img src="images/bulldogs.jpeg" alt="UPRM Track Team" class="affiliation-image"></a>
+        <a href="https://www.instagram.com/bulldogs_xc/"><img src="bulldogs.jpeg" alt="UPRM Track Team" class="affiliation-image"></a>
         <div class="affiliation-details">
             <p>UPRM Track and Field Team</p>
             <h4>Bulldogs Cross Country</h4>
