Actualizar piezo.html

--- a/piezo.html
+++ b/piezo.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin Rivera Piezo </title>
+    <title>Piezo Muscular Monitor </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="container">
 	<aside class="sidebar">
-	  	<img src="images/kev.jpeg" alt="Kevin" class="folio-image">
+	  	<img src="kev.jpeg" alt="Kevin" class="folio-image">
    	  <h1 align="center">Kevin S. Rivera Ramos</h1>
     	  <div align="center" class="emails">
         <a href="mailto:kevin.rivera110@upr.edu" target="_blank">
@@ -39,7 +39,7 @@
 </aside>
 <main class="main-content">
 	<div class="main-text">
-			<img src="images/piezo.JPG">
+			<img src="piezo.JPG">
 	   <h1>Piezo Muscular Sensor - Personal Project, 2024</h1>
 	<hr>
 		<h3>MAIN IDEA</h3>
